# esp32-am312-pir-test

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  main.c
